--- a/assets/scss/partials/_elements.scss
+++ b/assets/scss/partials/_elements.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-	background: #ddd;
+	background: #dfdfdf;
 	font: $body;
 	color: #222;
 	margin: 0;
